--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script defer src="./js/jquery-2.1.0.js"></script>
 	<script defer src="./js/bootstrap.js"></script>
 	<script defer src="./js/blocs.js"></script>
-	<script defer src="./js/jquery.touchSwipe.js" defer></script>
+	<script defer src="./js/jquery.touchSwipe.js"></script>
 	<script defer src="./js/gmaps.js"></script>
 
     <title>La chouette agence, web design Lyon</title>
@@ -37,9 +37,9 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Lyon web design logo agence chouette" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+				<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -58,20 +58,20 @@
 	</div>
 </header>
 <!-- bloc-0 END -->
-
+<main>
 <!-- bloc-1-presentation -->
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<figure>
-					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
-				<figcaption class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
-				</figcaption>
+					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web Lyon, création logo Lyon" />
 				</figure>
+				<h1 class="text-center hero-bloc-text tc-white ">
+					La chouette agence.
+				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" title="Lien page contactez-nous">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -80,11 +80,11 @@
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+<article class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<img alt="agence web, agence web lyon, web design ly, stratégie web" src="img/title.png" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -92,44 +92,43 @@
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Web design
-				</h3>
+				</h2>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
-					&nbsp;Stratégie
-				</h3>
+				<h2 class="mg-md text-center">
+					Stratégie
+				</h2>
 				<p class="text-center ">
-					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
 				</p>
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h3 class="mg-md text-center">
+				<h2 class="mg-md text-center">
 					Illustrations
-				</h3>
+				</h2>
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
-			</div>
+			<figure class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+				<img alt="agence web, agence web Lyon, web design Lyon, stratégie web,Texte" src="img/citation.png" />
+			</figure>
 		</div>
 	</div>
-</section>
+</article>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
@@ -138,10 +137,11 @@
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-white">
-					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
+				<br><br><a class="ltc-white bold-link" href="page2.html" title="lien page contactez-nous">Contactez notre équipe</a>
 				</p>
 			</div>
 		</div>
@@ -150,16 +150,16 @@
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<article class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
-			</div>
+			<figure class="col-sm-12 text-center">
+				<img alt="agence web, agence web Lyon, web design Lyon, stratégie web,text" src="img/title2.png" />
+			</figure>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -168,7 +168,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -179,7 +179,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -188,7 +188,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
@@ -198,7 +198,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</article>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
@@ -209,11 +209,12 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" title="lien page contactez-nous">Contact</a>
 			</div>
 		</div>
 	</div>
 </section>
+</main>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
@@ -222,7 +223,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
+					La chouette agence - Agence web basée à Lyon.
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
@@ -245,11 +246,10 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#FFFF;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						Partenaires
+						<h4>Partenaires</h4>
 							<ul>
 								<li><a href="voiture.com" title="voiture">voiture.com</a></li>
 								<li><a href="pizza.com" title="pizza">pizza.com</a></li>
@@ -258,7 +258,7 @@
 							</ul>		
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 1
+						<h4>Annuaires liste 1</h4>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -267,12 +267,12 @@
 							<li><a href="123site.com">123site.com</a></li>
 							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
 							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+							<li><a href="meilleuresagenceslyon.com">meilleuresagenceslyon.com</a></li>
 							<li><a href="listeseo.com">listeseo.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 2
+						<h4>Annuaires liste 2</h4>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
@@ -294,7 +294,6 @@
 
 </div>
 <!-- Principal conteneur END -->
-    
 
 </body>
 </html>
