--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="keywords" content="La chouette agence, agence design, agence design lyon">
     <meta name="description" content="Agence Web design basée sur lyonnais,">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="google-site-verification" content="RAHOizXaRde4F-EBfmzoBGm51mFMI6t8BN4G1dk8GXs" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" title="logo entreprise">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
