--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web lyon, web design ly, stratégie web" src="img/title.png" />
+				<h2>La chouette agence est une agence de web desigin qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -125,9 +125,10 @@
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
-			<figure class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web Lyon, web design Lyon, stratégie web,Texte" src="img/citation.png" />
-			</figure>
+			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+				<h2>"La chouette agence est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h2>
+				<small>Maxime Guibard, PDG de A vos fourchettes</small>
+			</div>
 		</div>
 	</div>
 </article>
@@ -155,9 +156,9 @@
 <article class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
-			<figure class="col-sm-12 text-center">
-				<img alt="agence web, agence web Lyon, web design Lyon, stratégie web,text" src="img/title2.png" />
-			</figure>
+			<div class="col-sm-12 text-center">
+				<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
@@ -253,38 +254,38 @@
 					<div class="col-sm-4">
 						<h4>Partenaires</h4>
 							<ul>
-								<li><a href="voiture.com" title="voiture">voiture.com</a></li>
-								<li><a href="pizza.com" title="pizza">pizza.com</a></li>
-								<li><a href="matoiture.com" title="toiture">matoiture.com</a></li>
-								<li><a href="immobilierseo.com" title="immobilier">immobilierseo.com</a></li>
+								<li><a href="#" title="voiture">voiture.com</a></li>
+								<li><a href="#" title="pizza">pizza.com</a></li>
+								<li><a href="#" title="toiture">matoiture.com</a></li>
+								<li><a href="#" title="immobilier">immobilierseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
 						<h4>Annuaires liste 1</h4>
 						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagenceslyon.com">meilleuresagenceslyon.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
+							<li><a href="#">annuaireagence.com</a></li>
+							<li><a href="#">annuaireseo.com</a></li>
+							<li><a href="#">annuairemarketing.com</a></li>
+							<li><a href="#">123seo.com</a></li>
+							<li><a href="#">123site.com</a></li>
+							<li><a href="#">annuairewordpress.com</a></li>
+							<li><a href="#">listeagence.com</a></li>
+							<li><a href="#">meilleuresagenceslyon.com</a></li>
+							<li><a href="#">listeseo.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<h4>Annuaires liste 2</h4>
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+							<li><a href="#">betterseo.com</a></li>
+							<li><a href="#">ameliorerseo.com</a></li>
+							<li><a href="#">seojuicelien.com</a></li>
+							<li><a href="#">meilleursliens.com</a></li>
+							<li><a href="#">liensagogo.com</a></li>
+							<li><a href="#">backlink.com</a></li>
+							<li><a href="#">linkjuiceannuaire.com</a></li>
+							<li><a href="#">remontersurgoogle.com</a></li>
+							<li><a href="#">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
