--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
     <meta name="description" content="La chouette agence, agence web design, agence web design Lyon, design web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="canonical" href="https://grodar56.github.io/SEO-project./index.html">
 	<link rel = ”alternative” hreflang = ”fr-fr” href="https://grodar56.github.io/SEO-project./" />
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
