--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="La chouette agence, agence design, agence design lyon">
-    <meta name="description" content="Agence Web design basée sur lyonnais,">
+    <meta name="description" content="Agence Web design basée sur Lyon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="google-site-verification" content="RAHOizXaRde4F-EBfmzoBGm51mFMI6t8BN4G1dk8GXs" />
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg" title="logo entreprise">
@@ -52,7 +52,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html" title="Page pour nous contactez">Contactez-nous &gt;</a>
+						<a href="page2.html" title="Page pour nous contactez">Contactez-nous</a>
 					</li>
 				</ul>
 			</div>
@@ -73,7 +73,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" title="Lien page contactez-nous">Contact</a>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" class="cta-hero" title="Lien page contactez-nous">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<h2>"La chouette agence est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h2>
-				<small>Maxime Guibard, PDG de A vos fourchettes</small>
+				<p>Maxime Guibard, PDG de A vos fourchettes</p>
 			</div>
 		</div>
 	</div>
@@ -162,7 +162,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal loc-+al" data-frame="snapshot-lb"><img src="img/1.jpg" alt="lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -208,9 +208,9 @@
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h3 class="mg-md text-center tc-white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
+			</h3>
 			<div class="col-sm-12 text-center">
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" title="lien page contactez-nous">Contact</a>
 			</div>
@@ -225,9 +225,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h3 class="text-center">
 					La chouette agence - Agence web basée à Lyon.
-				</p>
+				</h3>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
