--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contactez-nous &gt;</a>
+						<a href="page2.html">Contactez-nous</a>
 					</li>
 				</ul>
 			</div>
@@ -133,9 +133,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h2 class="text-center">
 					La chouette agence - Agence web basée à Lyon.<br>
-				</p>
+				</h2>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
