--- a/index.html
+++ b/index.html
@@ -231,22 +231,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/explore"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -254,38 +254,38 @@
 					<div class="col-sm-4">
 						<h4>Partenaires</h4>
 							<ul>
-								<li><a href="#" title="voiture">voiture.com</a></li>
-								<li><a href="#" title="pizza">pizza.com</a></li>
-								<li><a href="#" title="toiture">matoiture.com</a></li>
-								<li><a href="#" title="immobilier">immobilierseo.com</a></li>
+								<li><a href="voiture.com" title="voiture">Location de voiture</a></li>
+								<li><a href="pizza.com" title="pizza">Pizerria</a></li>
+								<li><a href="matoiture.com" title="toiture"></a>Charpentier</li>
+								<li><a href="immobilierseo.com" title="immobilier"></a> Agence Immobilière</li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
 						<h4>Annuaires liste 1</h4>
 						<ul>
-							<li><a href="#">annuaireagence.com</a></li>
-							<li><a href="#">annuaireseo.com</a></li>
-							<li><a href="#">annuairemarketing.com</a></li>
-							<li><a href="#">123seo.com</a></li>
-							<li><a href="#">123site.com</a></li>
-							<li><a href="#">annuairewordpress.com</a></li>
-							<li><a href="#">listeagence.com</a></li>
-							<li><a href="#">meilleuresagenceslyon.com</a></li>
-							<li><a href="#">listeseo.com</a></li>
+							<li><a href="annuaireagence.com">Annuaire agence</a></li>
+							<li><a href="annuaireseo.com">Annuaire SEO</a></li>
+							<li><a href="annuairemarketing.com">Annuaire marketing</a></li>
+							<li><a href="123seo.com">SEO</a></li>
+							<li><a href="123site.com">Site internet</a></li>
+							<li><a href="annuairewordpress.com">Wordpress</a></li>
+							<li><a href="listeagence.com">Liste agence</a></li>
+							<li><a href="meilleuresagenceslyon.com">Agence Lyon</a></li>
+							<li><a href="listeseo.com">Liste SEO</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<h4>Annuaires liste 2</h4>
 						<ul>
-							<li><a href="#">betterseo.com</a></li>
-							<li><a href="#">ameliorerseo.com</a></li>
-							<li><a href="#">seojuicelien.com</a></li>
-							<li><a href="#">meilleursliens.com</a></li>
-							<li><a href="#">liensagogo.com</a></li>
-							<li><a href="#">backlink.com</a></li>
-							<li><a href="#">linkjuiceannuaire.com</a></li>
-							<li><a href="#">remontersurgoogle.com</a></li>
-							<li><a href="#">vraiseofiable.com</a></li>
+							<li><a href="betterseo.com">Better SEO</a></li>
+							<li><a href="ameliorerseo.com">Améliorer SEO</a></li>
+							<li><a href="seojuicelien.com">SEO juicelien</a></li>
+							<li><a href="meilleursliens.com">Bon lien</a></li>
+							<li><a href="liensagogo.com">Liens </a></li>
+							<li><a href="backlink.com">Backlink</a></li>
+							<li><a href="linkjuiceannuaire.com">Linkjuiceannuaire</a></li>
+							<li><a href="remontersurgoogle.com">Référecement naturel</a></li>
+							<li><a href="vraiseofiable.com">Aide SEO</a></li>
 						</ul>
 					</div>
 				</div>
