--- a/index.html
+++ b/index.html
@@ -228,25 +228,25 @@
 				<h3 class="text-center">
 					La chouette agence - Agence web basée à Lyon.
 				</h3>
-				<div class="row row-no-gutters social">
+				<div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/explore"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md">Twitter</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md">Facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md">Dribble</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md">Instagram</span></a>
 						</div>
 					</div>
 				</div>
@@ -256,8 +256,8 @@
 							<ul>
 								<li><a href="voiture.com" title="voiture">Location de voiture</a></li>
 								<li><a href="pizza.com" title="pizza">Pizerria</a></li>
-								<li><a href="matoiture.com" title="toiture"></a>Charpentier</li>
-								<li><a href="immobilierseo.com" title="immobilier"></a> Agence Immobilière</li>
+								<li><a href="matoiture.com" title="toiture">Charpentier</a></li>
+								<li><a href="immobilierseo.com" title="immobilier">Agence Immobilière</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
