--- a/page2.html
+++ b/page2.html
@@ -138,25 +138,25 @@
 				<h2 class="text-center">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</h2>
-				<div class="row row-no-gutters social">
+				<div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/explore"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md">Twitter</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md">Facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md">Dribble</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md">Instagram</span></a>
 						</div>
 					</div>
 				</div>
