--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 							<li><a href="annuaireagence.com">Annuaire agence</a></li>
 							<li><a href="annuaireseo.com">Annuaire SEO</a></li>
 							<li><a href="annuairemarketing.com">Annuaire marketing</a></li>
-							<li><a href="123seo.com">SEO</a></li>
+							<li><a href="123seo.com">Site SEO</a></li>
 							<li><a href="123site.com">Site internet</a></li>
 							<li><a href="annuairewordpress.com">Wordpress</a></li>
 							<li><a href="listeagence.com">Liste agence</a></li>
