modif balise og

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="fr">
 <head>
-    <meta charset="utf-8">
+	<meta charset="utf-8">
+	<meta property="og:url" content="https://grodar56.github.io/SEO-project./index.html">
+	<meta property="og:title" content="La chouette agence, web desigin Lyon">
+	<meta property="og:type" content="article web design">
     <meta name="keywords" content="La chouette agence, agence design, agence design lyon">
     <meta name="description" content="Agence Web design basée sur Lyon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
