--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="La chouette agence, agence web design, agence web design Lyon, design web">
+    <meta name="keywords" content="La chouette agence, agence web design, agence web design Lyon, design web,contactez-nous">
     <meta name="description" content="La chouette agence, agence web design, agence web design Lyon, design web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
