--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="google-site-verification" content="RAHOizXaRde4F-EBfmzoBGm51mFMI6t8BN4G1dk8GXs" />
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg" title="logo entreprise">
-	<link rel = ”alternative” hreflang = ”fr-fr” href="https://grodar56.github.io/SEO-project./" />
+	<link rel = ”alternative” hreflang = "fr" href="https://grodar56.github.io/SEO-project./" />
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -76,7 +76,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" class="cta-hero" title="Lien page contactez-nous">Contact</a>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" title="Lien page contactez-nous">Contact</a>
 				</div>
 			</div>
 		</div>
