--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="canonical" href="https://grodar56.github.io/SEO-project./index.html">
-	<link rel = ”alternative” hreflang = ”fr-fr” href="https://grodar56.github.io/SEO-project./" />
+	<link rel = ”alternative” hreflang = ”fr” href="https://grodar56.github.io/SEO-project./" />
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -79,10 +79,11 @@
 
 <!-- bloc-7 -->
 <section class="bloc bgc-white l-bloc" id="bloc-7">
+	<h2 class="text-center">Pour nous contacter</h2>
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate>
 					<div class="form-group">
 						<label>
 							Nom
@@ -105,8 +106,9 @@
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-							<textarea id="message" type="text" class="form-control" rows="4" cols="50" required></textarea>
 						</label>
+						<textarea id="message" type="text" class="form-control" rows="4" cols="50" required></textarea>
+
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
