--- a/page2.html
+++ b/page2.html
@@ -6,9 +6,7 @@
     <meta name="description" content="La chouette agence, agence web design, agence web design Lyon, design web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="canonical" href="https://grodar56.github.io/SEO-project./index.html">
-	<link rel = ”alternative” hreflang = ”fr” href="https://grodar56.github.io/SEO-project./" />
-    
+	<link rel="canonical" href="https://grodar56.github.io/SEO-project./index.html">    
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -106,9 +104,8 @@
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+							<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 						</label>
-						<textarea id="message" type="text" class="form-control" rows="4" cols="50" required></textarea>
-
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
